# sz-cpp-sdk

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
.claude/: NEXT_STEPS.md  STATUS.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
cmake/: SzCppSdkConfig.cmake.in
docs/: Doxyfile  csharp-sdk-api.md  mainpage.md  native-ffi-contract.md
examples/: README.md  sz_config_demo.cpp  sz_configmanager_demo.cpp  sz_diagnostic_demo.cpp  sz_engine_demo.cpp  sz_example_common.hpp  sz_export_report.cpp  sz_get_why_how.cpp  sz_product_demo.cpp  sz_product_info.cpp  sz_register_and_load.cpp  sz_search_records.cpp
include/senzing/sdk/: SzConfig.hpp  SzConfigManager.hpp  SzDiagnostic.hpp  SzEngine.hpp  SzEnvironment.hpp  SzException.hpp  SzProduct.hpp
include/senzing/sdk/core/: SzCoreConfig.hpp  SzCoreConfigManager.hpp  SzCoreDiagnostic.hpp  SzCoreEngine.hpp  SzCoreEnvironment.hpp  SzCoreProduct.hpp
src/core/: SzCoreConfig.cpp  SzCoreConfigManager.cpp  SzCoreDiagnostic.cpp  SzCoreEngine.cpp  SzCoreEnvironment.cpp  SzCoreProduct.cpp  SzExceptionMapper.cpp  SzExceptionMapper.hpp  native_ffi.hpp  sz_helpers.cpp  sz_helpers.hpp
test/: PARITY_NOTES.md  SzCoreConfigManagerTest.cpp  SzCoreConfigTest.cpp  SzCoreDiagnosticTest.cpp  SzCoreEngineBasicsTest.cpp  SzCoreEngineGraphTest.cpp  SzCoreEngineHowTest.cpp  SzCoreEngineReadTest.cpp  SzCoreEngineTest.cpp  SzCoreEngineWhyTest.cpp  SzCoreEngineWriteTest.cpp  SzCoreEnvironmentTest.cpp  SzCoreProductTest.cpp  SzEnvironmentDestroyedExceptionTest.cpp  SzExceptionTest.cpp  SzFlagsTest.cpp  SzRecordTest.cpp  abstract_test.hpp  repo_manager.hpp  sz_no_deepbind.c  sz_record.hpp  sz_sample_records.hpp  sz_test_repo.hpp  text_utilities.hpp
tools/: gen_errors.py  gen_flags.py
